# metal-detector-studio

./: .gitignore  .mcp.json  CLAUDE.md  MANUAL.md  PROTOCOL.md  README.md  start.cmd
backend/: main.py  mcp_server.py  pyproject.toml  schema.json
backend/app/: __init__.py  config.py  frame_validation.py  profiles.py  recording.py  validate_profile.py
backend/app/flash/: __init__.py  base.py  dfu.py  job.py  serial_control.py
backend/app/server/: __init__.py  app.py  hub.py
backend/app/sources/: __init__.py  base.py  replay.py  serial.py  synthetic.py
backend/app/telemetry/: __init__.py  models.py
backend/profiles/: README.md  example_vlf.json  spectral_g4.json  urd1.json
backend/scripts/: serial_sniff.py  ws_client.py
backend/tests/: conftest.py  test_api.py  test_contract.py  test_flash.py  test_recording.py  test_replay.py  test_serial_parser.py  test_validation.py
examples/stm32/: README.md  stream_example.c
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/electron/: gen-icon.cjs  loading.html  main.cjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AdcSpectrum.tsx  CoilDesigner.tsx  CoilLab.tsx  ControlPanel.tsx  FilterLab.tsx  FirmwarePanel.tsx  Hodograph.tsx  IQScope.tsx  IQSpectrum.tsx  IQWaterfall.tsx  InfoPopover.tsx  LinkPanel.tsx  PhaseLab.tsx  Recorder.tsx  RecordingControls.tsx  Scope.tsx  SourceControls.tsx  Spectrum.tsx
frontend/src/lib/: api.ts  config.ts  csv.ts  fft.ts  palette.ts  tones.ts  types.ts  usePersistentState.ts  useSwingPhase.ts  useTelemetry.ts
