[project]
name = "backend"
version = "0.9.0"
description = "Metal Detector Studio — bench lab backend (real-time telemetry over serial)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "numpy>=2.0",
    "pydantic>=2.7",
    "pyserial-asyncio>=0.6",
    "mcp>=1.12",
]

[tool.uv]
package = false
